# Forensic-Accounting-Python

./: .gitignore  README.md  docker-compose.yml  index.html  requirements.txt
Data/Bus Demo/: 00 - Calendar.sql  01 - Employee.sql  02 - Bus.sql  03 - ExpenseCategory.sql  04 - Vendor.sql  05 - VendorExpenseCategory.sql  06 - LineItem.sql  07 - Populate LineItem.sql
Notebooks/: Demo 00 - Reviewing a Database.ipynb  Demo 01 - Summary Analysis.ipynb  Demo 02 - Growth Analysis.ipynb  Demo 03 - Gaps and Islands.ipynb  Demo 04 - Regression Analysis.ipynb  Demo 05 - Duplicates and Cardinality.ipynb  Demo 06 - Cohorts and Clusters.ipynb  Demo 07 - Benfords Law.ipynb
code/python/: Demo 00 - Reviewing a Database.ipynb  Demo 01 - Summary Analysis.ipynb  Demo 02 - Growth Analysis.ipynb  Demo 03 - Regression Analysis.ipynb  Demo 04 - Duplicates and Cardinality.ipynb  Demo 05 - Cohorts and Clusters.ipynb  Demo 06 - Benfords Law.ipynb  Dockerfile  pyproject.toml
code/sql/: Dockerfile  docker-entrypoint.sh
code/sql/ForensicAccounting/: 00 - Calendar.sql  02 - Bus.sql  06 - LineItem.sql  07 - Populate LineItem.sql
