[project]
name = "forensic-accounting-python"
version = "1.0.0"
description = "Applying Forensic Accounting Techniques using SQL and Python"
requires-python = ">=3.12"
dependencies = [
    "pyodbc==5.3.0",
    "matplotlib==3.10.8",
    "seaborn==0.13.2",
    "seaborn-qqplot==0.5.0",
    "scikit-learn==1.8.0",
    "numpy==2.4.3",
    "pandas==3.0.1",
    "statsmodels==0.14.6",
    "lightgbm==4.6.0",
    "graphviz==0.21",
    "jinja2==3.1.6",
    "sparklines==0.7.0",
    "beautifulsoup4==4.14.3",
    "requests==2.33.0",
    "jupyter",
    "jupysql",
    "sqlalchemy",
]
